--- a/front-end/src/components/Rosa.module.css
+++ b/front-end/src/components/Rosa.module.css
@@ -415,6 +415,11 @@
   transform: translateY(1px);
 }
 
+.Thom_Gio {
+  /* TransformY di 1 px e TransformX di 5 px */
+  transform: translateY(1px) translateX(5px);
+}
+
 .overlayContainerSymbol {
   display: flex;
   height: 50px;
@@ -641,6 +646,11 @@
     height: 28px;
     transform: translateY(2px);
   }
+
+  .Thom_Gio {
+    /* TransformY di 2 px e TransformX di 10 px */
+    transform: translateY(2px) translateX(12px);
+  }
 }
 
 @media (max-width: 992px) {
@@ -745,6 +755,11 @@
     height: 25px;
     transform: translateY(2px);
   }
+
+  .Thom_Gio {
+    /* TransformY di 2 px e TransformX di 15 px */
+    transform: translateY(2px) translateX(15px);
+  }
 }
 
 @media (max-width: 710px) {
@@ -819,6 +834,7 @@
   .overlayNation {
     width: 22px;
     height: 22px;
+    transform: translateY(2px) translateX(-1px);
   }
 }
 
